--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
+    "eslint": "^9.22.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.12",
     "tailwindcss-animate": "latest",
